adjust post rebase